# cs529-project2

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
data/processed/feature_extracted/: test_features_1024.csv  test_features_2048.csv  test_features_4096.csv  test_features_512.csv  test_features_8192.csv  train_features_1024.csv  train_features_2048.csv  train_features_4096.csv  train_features_512.csv  train_features_8192.csv
data/results/: model_comparison_cv_results.csv
docs/: feature_extraction_diagram.drawio
experiments/: data_preprocess.py  feature_extraction.py  generate_logistic_regression.py  gridsearch_preprocessed.py  model_comparison.py  softmax_gridsearch.py  test_gridsearch.py  test_logreg.py
notebooks/: results_analysis.ipynb  testing.ipynb
results/: logistic_regression_cv_results.csv  model_comparison_cv_results_all_win_sizes.csv
src/: custom_transformers.py  generate_logistic_regression.py  logistic_regression.py  pickle_data.py  utils.py
